Author update fully working, other small fixes (incl whitespace trimming and reducing)

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,15 +23,24 @@ tr:nth-child(1) {
 #instructions {
   color: grey;
 }
-#authors {
+/*#authors {
   width: 98%;
-}
+}*/
 input[readonly] {
   /*display: block;*/
   border: none;
   background-color: transparent;
   cursor: pointer;
 }
+.authors > * {
+  display: block;
+}
 td button {
   height: 100%;
+}
+td button.add-input {
+  height: auto;
+}
+.loading {
+  height: 1em;
 }
